# ethbucharest.bayge.xyz

./: .gitignore  Cargo.toml  Makefile  README.md  deploy.sh  foundry.toml  game.rc  online-estimate.rc  requirements.txt  testnet-deploy.sh  tests.sh
proptest-regressions/: prover.txt  storage_prover.txt
puzzles/: gas-reference.py
src/: ETHBucharestHackathonToken.sol  ICallback.sol  IEvents.sol  IProver.sol  MetaphoricProxy.sol  ScoreToken.sol  contract_prover.rs  errors.rs  events.rs  example_prover.rs  factory_prover.rs  immutables.rs  lib.rs  main.rs  prover.rs  proxy.rs  reference.py  storage_prover.rs
talks/: gas-consumption.slide  intro-to-stylus.slide
tests/: TestMetaphoricProxy.sol  TestMetaphoricalProxy.sol
